default/objects/Loan_Program__c/Loan_Program__c.object-meta.xml
<CustomObject>
    <label>Program</label>
    <nameField>
        <label>Loan Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>