default/objects/Loan_Program__c/fields/Applicant_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Instruction__c</fullName>
    <label>Applicant Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>