default/objects/Loan_Program__c/fields/Application_Questions_instruction__c.field-meta.xml
<CustomField>
    <fullName>Application_Questions_instruction__c</fullName>
    <label>Application Questions instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>