default/objects/Loan_Program__c/fields/Certification_Description__c.field-meta.xml
<CustomField>
    <fullName>Certification_Description__c</fullName>
    <label>Certification Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>