default/objects/Loan_Program__c/fields/Loan_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Loan_Instructions__c</fullName>
    <label>Loan Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>