default/objects/Loan_Program__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mortgage Loan</fullName>
            </value>
            <value>
                <fullName>Consumer Loan</fullName>
            </value>
            <value>
                <fullName>Business Loan</fullName>
            </value>
            <value>
                <fullName>Auto Loan</fullName>
                <isActive>false</isActive>
                <label>Auto Loan</label>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
                <isActive>false</isActive>
                <label>Personal Loan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>