default/objects/Loan_Program__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <inlineHelpText>Enter the API Record Type Id of the Opportunity Record Type that should be used when a new Application and Opportunity are created.</inlineHelpText>
    <label>Opportunity Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>