default/objects/Loan_Program__c/fields/Program_Category__c.field-meta.xml
<CustomField>
    <fullName>Program_Category__c</fullName>
    <label>Program Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBA Loan</fullName>
            </value>
            <value>
                <fullName>Residential Mortgage Loan</fullName>
            </value>
            <value>
                <fullName>Consumer Credit &amp; Loans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>